--- a/index.html
+++ b/index.html
@@ -2,136 +2,98 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Panel Polobar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Cliente - Polobar</title>
   <style>
     body { background: #111; color: white; font-family: sans-serif; padding: 20px; }
-    .card { background: #222; padding: 15px; border-radius: 10px; margin-bottom: 10px; }
-    .card a { color: #ff5050; text-decoration: none; font-weight: bold; }
-    .danger { background: #aa0000; color: white; padding: 6px 12px; border: none; border-radius: 6px; cursor: pointer; }
-    .global-actions button { margin: 6px; padding: 8px 16px; border-radius: 8px; border: none; cursor: pointer; }
-    .clean { background: #4444aa; color: white; }
-    .download { background: #008800; color: white; }
-    .upload { background: #888800; color: black; }
-    .footer { margin-top: 30px; color: #aaa; text-align: center; font-size: 14px; }
+    h1 { color: #ff5050; }
+    .saldo { font-size: 1.5em; margin-bottom: 20px; }
+    .movimiento { background: #222; padding: 10px; margin-bottom: 10px; border-radius: 6px; }
+    .movimiento span { display: block; }
+    .entrada { color: #00cc00; }
+    .salida { color: #cc0000; }
+    input, button { padding: 8px; margin: 5px 0; border-radius: 6px; border: none; }
+    button { cursor: pointer; }
+    .volver { background: #444; color: white; margin-top: 20px; display: inline-block; }
   </style>
 </head>
 <body>
-  <h1>📋 Panel Polobar</h1>
-  <div id="clientes"></div>
 
-  <div class="card">
-    <button onclick="agregarCliente()" style="background: #3333aa; color: white; padding: 10px 20px; font-size: 16px; border: none; border-radius: 8px; cursor: pointer;">
-      ➕ Agregar cliente
-    </button>
-  </div>
+  <h1 id="nombreCliente">Cliente</h1>
+  <div class="saldo" id="saldoActual">$0</div>
 
-  <div class="global-actions">
-    <button onclick="borrarTodosLosHistoriales()" class="clean">🧹 Borrar solo los historiales</button>
-    <button onclick="descargarBackup()" class="download">📥 Descargar respaldo (.json)</button>
-    <input type="file" id="fileInput" style="display: none;" accept=".json" />
-    <button onclick="document.getElementById('fileInput').click()" class="upload">📤 Cargar respaldo (.json)</button>
-    <button onclick="borrarDatos()" class="danger">🗑️ Borrar todos los datos</button>
-  </div>
+  <input type="number" id="monto" placeholder="Valor del movimiento" />
+  <input type="text" id="descripcion" placeholder="Descripción (opcional)" />
+  <br/>
+  <button onclick="agregarMovimiento(true)" style="background:#00cc00;">➕ Abonar</button>
+  <button onclick="agregarMovimiento(false)" style="background:#cc0000;">➖ Cobrar</button>
 
-  <div class="footer">© Polobar 2025</div>
+  <h2>Historial</h2>
+  <div id="historial"></div>
+
+  <button onclick="window.location.href='index.html'" class="volver">⬅️ Volver</button>
 
   <script>
-    function renderClientes() {
-      const container = document.getElementById("clientes");
-      container.innerHTML = "";
-      const claves = Object.keys(localStorage).filter(k => k.startsWith("saldo_"));
-      claves.forEach(clave => {
-        const cliente = clave.replace("saldo_", "");
-        const saldo = localStorage.getItem(clave);
-        const div = document.createElement("div");
-        div.className = "card";
-        div.innerHTML = `
-          <a href="cliente.html?cliente=${cliente}">👤 ${cliente.charAt(0).toUpperCase() + cliente.slice(1)} — $${saldo}</a><br/>
-          <button onclick="borrarMovimientos('${cliente}')" class="danger">🗑️ Borrar movimientos</button>
+    const params = new URLSearchParams(window.location.search);
+    const cliente = params.get("cliente");
+
+    if (!cliente) {
+      document.body.innerHTML = "<h1 style='color:red;'>❌ Cliente no especificado</h1>";
+      throw new Error("Cliente no especificado");
+    }
+
+    const saldoKey = `saldo_${cliente}`;
+    const movKey = `movimientos_${cliente}`;
+    const nombreCliente = cliente.charAt(0).toUpperCase() + cliente.slice(1);
+
+    document.getElementById("nombreCliente").textContent = nombreCliente;
+
+    function actualizarVista() {
+      const saldo = parseInt(localStorage.getItem(saldoKey)) || 0;
+      document.getElementById("saldoActual").textContent = `$${saldo}`;
+
+      const historial = JSON.parse(localStorage.getItem(movKey)) || [];
+      const div = document.getElementById("historial");
+      div.innerHTML = "";
+
+      historial.reverse().forEach(item => {
+        const mov = document.createElement("div");
+        mov.className = "movimiento";
+        mov.innerHTML = `
+          <span class="${item.tipo === 'entrada' ? 'entrada' : 'salida'}">
+            ${item.tipo === 'entrada' ? '➕ Abono' : '➖ Cobro'}: $${item.monto}
+          </span>
+          <span>📝 ${item.descripcion || 'Sin descripción'}</span>
+          <span>📅 ${item.fecha}</span>
         `;
-        container.appendChild(div);
+        div.appendChild(mov);
       });
     }
 
-    function agregarCliente() {
-      const nombre = prompt("🧾 Ingresa el nombre del nuevo cliente:");
-      if (!nombre) return;
-      const clave = nombre.toLowerCase().replace(/\s+/g, '');
-      if (localStorage.getItem(`saldo_${clave}`)) {
-        alert("⚠️ Este cliente ya existe.");
-        return;
-      }
-      const monto = prompt(`💰 ¿Cuál es el saldo inicial para ${nombre}?`);
-      if (!monto || isNaN(monto)) return alert("❌ El saldo debe ser un número.");
-      localStorage.setItem(`saldo_${clave}`, parseInt(monto));
-      localStorage.setItem(`movimientos_${clave}`, JSON.stringify([]));
-      alert(`✅ Cliente ${nombre} agregado con $${monto}.`);
-      renderClientes();
-    }
+    function agregarMovimiento(esEntrada) {
+      const monto = parseInt(document.getElementById("monto").value);
+      const descripcion = document.getElementById("descripcion").value;
+      if (isNaN(monto) || monto <= 0) return alert("⚠️ Ingrese un monto válido.");
 
-    function borrarMovimientos(nombre) {
-      const confirmar = confirm(`¿Seguro que deseas borrar los movimientos de ${nombre}? El saldo se mantendrá.`);
-      if (!confirmar) return;
-      localStorage.removeItem(`movimientos_${nombre}`);
-      alert(`✅ Movimientos de ${nombre} eliminados.`);
-    }
+      let saldo = parseInt(localStorage.getItem(saldoKey)) || 0;
+      saldo = esEntrada ? saldo + monto : saldo - monto;
+      localStorage.setItem(saldoKey, saldo);
 
-    function borrarTodosLosHistoriales() {
-      const claves = Object.keys(localStorage).filter(k => k.startsWith("movimientos_"));
-      claves.forEach(k => localStorage.removeItem(k));
-      alert("🧹 Historiales eliminados correctamente.");
-    }
-
-    function descargarBackup() {
-      const datos = {};
-      Object.keys(localStorage).forEach(k => {
-        if (k.startsWith("saldo_") || k.startsWith("movimientos_")) {
-          datos[k] = JSON.parse(localStorage.getItem(k));
-        }
+      const historial = JSON.parse(localStorage.getItem(movKey)) || [];
+      historial.push({
+        tipo: esEntrada ? "entrada" : "salida",
+        monto,
+        descripcion,
+        fecha: new Date().toLocaleString()
       });
-      const blob = new Blob([JSON.stringify(datos, null, 2)], { type: 'application/json' });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement("a");
-      a.href = url;
-      a.download = "respaldo_polobar.json";
-      a.click();
-      URL.revokeObjectURL(url);
+      localStorage.setItem(movKey, JSON.stringify(historial));
+
+      document.getElementById("monto").value = "";
+      document.getElementById("descripcion").value = "";
+      actualizarVista();
     }
 
-    function borrarDatos() {
-      const confirmar = confirm("⚠️ ¿Estás seguro de que deseas borrar TODOS los datos?");
-      if (!confirmar) return;
-      Object.keys(localStorage).forEach(k => {
-        if (k.startsWith("saldo_") || k.startsWith("movimientos_")) {
-          localStorage.removeItem(k);
-        }
-      });
-      alert("🗑️ Todos los datos eliminados.");
-      renderClientes();
-    }
-
-    document.getElementById("fileInput").addEventListener("change", function () {
-      const file = this.files[0];
-      if (!file) return;
-      const reader = new FileReader();
-      reader.onload = function (e) {
-        try {
-          const datos = JSON.parse(e.target.result);
-          for (const clave in datos) {
-            localStorage.setItem(clave, JSON.stringify(datos[clave]));
-          }
-          alert("✅ Respaldo cargado exitosamente.");
-          renderClientes();
-        } catch (err) {
-          alert("❌ Error al cargar el respaldo.");
-        }
-      };
-      reader.readAsText(file);
-    });
-
-    // Ejecutar al cargar
-    renderClientes();
+    actualizarVista();
   </script>
 </body>
 </html>
