--- a/cliente.html
+++ b/cliente.html
@@ -1,48 +1,99 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Cliente</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Cliente - Polobar</title>
   <style>
     body { background: #111; color: white; font-family: sans-serif; padding: 20px; }
-    h2 { margin-top: 0; }
-    .mov { margin-bottom: 8px; }
+    h1 { color: #ff5050; }
+    .saldo { font-size: 1.5em; margin-bottom: 20px; }
+    .movimiento { background: #222; padding: 10px; margin-bottom: 10px; border-radius: 6px; }
+    .movimiento span { display: block; }
+    .entrada { color: #00cc00; }
+    .salida { color: #cc0000; }
+    input, button { padding: 8px; margin: 5px 0; border-radius: 6px; border: none; }
+    button { cursor: pointer; }
+    .volver { background: #444; color: white; margin-top: 20px; display: inline-block; }
   </style>
 </head>
 <body>
-  <h2 id="titulo"></h2>
-  <p><strong>Saldo actual:</strong> <span id="saldo"></span></p>
-  <h3>📜 Historial:</h3>
+
+  <h1 id="nombreCliente">Cliente</h1>
+  <div class="saldo" id="saldoActual">$0</div>
+
+  <input type="number" id="monto" placeholder="Valor del movimiento" />
+  <input type="text" id="descripcion" placeholder="Descripción (opcional)" />
+  <br/>
+  <button onclick="agregarMovimiento(true)" style="background:#00cc00;">➕ Abonar</button>
+  <button onclick="agregarMovimiento(false)" style="background:#cc0000;">➖ Cobrar</button>
+
+  <h2>Historial</h2>
   <div id="historial"></div>
+
+  <button onclick="window.location.href='index.html'" class="volver">⬅️ Volver</button>
 
   <script>
     const params = new URLSearchParams(window.location.search);
-    const cliente = params.get("c");
+    const cliente = params.get("cliente");
 
     if (!cliente) {
-      document.body.innerHTML = "<p>❌ Cliente no especificado.</p>";
-    } else {
-      const nombre = cliente.charAt(0).toUpperCase() + cliente.slice(1);
-      document.getElementById("titulo").textContent = `👤 Cliente: ${nombre}`;
-
-      const saldo = localStorage.getItem(`saldo_${cliente}`) || 0;
-      document.getElementById("saldo").textContent = `$${saldo}`;
-
-      const movimientos = JSON.parse(localStorage.getItem(`movimientos_${cliente}`) || "[]");
-      const contenedor = document.getElementById("historial");
-
-      if (movimientos.length === 0) {
-        contenedor.innerHTML = "<p>No hay movimientos registrados.</p>";
-      } else {
-        movimientos.forEach(m => {
-          const div = document.createElement("div");
-          div.className = "mov";
-          div.textContent = `📅 ${m.fecha || 'sin fecha'} — 💰 ${m.descripcion || 'sin detalle'}`;
-          contenedor.appendChild(div);
-        });
-      }
+      document.body.innerHTML = "<h1 style='color:red;'>❌ Cliente no especificado</h1>";
+      throw new Error("Cliente no especificado");
     }
+
+    const saldoKey = `saldo_${cliente}`;
+    const movKey = `movimientos_${cliente}`;
+    const nombreCliente = cliente.charAt(0).toUpperCase() + cliente.slice(1);
+
+    document.getElementById("nombreCliente").textContent = nombreCliente;
+
+    function actualizarVista() {
+      const saldo = parseInt(localStorage.getItem(saldoKey)) || 0;
+      document.getElementById("saldoActual").textContent = `$${saldo}`;
+
+      const historial = JSON.parse(localStorage.getItem(movKey)) || [];
+      const div = document.getElementById("historial");
+      div.innerHTML = "";
+
+      historial.reverse().forEach(item => {
+        const mov = document.createElement("div");
+        mov.className = "movimiento";
+        mov.innerHTML = `
+          <span class="${item.tipo === 'entrada' ? 'entrada' : 'salida'}">
+            ${item.tipo === 'entrada' ? '➕ Abono' : '➖ Cobro'}: $${item.monto}
+          </span>
+          <span>📝 ${item.descripcion || 'Sin descripción'}</span>
+          <span>📅 ${item.fecha}</span>
+        `;
+        div.appendChild(mov);
+      });
+    }
+
+    function agregarMovimiento(esEntrada) {
+      const monto = parseInt(document.getElementById("monto").value);
+      const descripcion = document.getElementById("descripcion").value;
+      if (isNaN(monto) || monto <= 0) return alert("⚠️ Ingrese un monto válido.");
+
+      let saldo = parseInt(localStorage.getItem(saldoKey)) || 0;
+      saldo = esEntrada ? saldo + monto : saldo - monto;
+      localStorage.setItem(saldoKey, saldo);
+
+      const historial = JSON.parse(localStorage.getItem(movKey)) || [];
+      historial.push({
+        tipo: esEntrada ? "entrada" : "salida",
+        monto,
+        descripcion,
+        fecha: new Date().toLocaleString()
+      });
+      localStorage.setItem(movKey, JSON.stringify(historial));
+
+      document.getElementById("monto").value = "";
+      document.getElementById("descripcion").value = "";
+      actualizarVista();
+    }
+
+    actualizarVista();
   </script>
 </body>
 </html>
