--- a/cliente.html
+++ b/cliente.html
@@ -1,82 +1,24 @@
+<!-- cliente.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <title>Cliente - Polobar</title>
+  <script type="module" src="cliente.js"></script>
   <style>
     body { background: #111; color: white; font-family: sans-serif; padding: 20px; }
-    h1, h2 { color: #ff5050; }
-    button { margin: 6px; padding: 10px 20px; border-radius: 6px; border: none; cursor: pointer; }
-    .abono { background: #008800; color: white; }
-    .consumo { background: #aa0000; color: white; }
-    .movimientos { margin-top: 20px; background: #222; padding: 15px; border-radius: 8px; }
-    .mov { margin-bottom: 8px; padding: 6px; border-bottom: 1px solid #333; }
-    .back { color: #ccc; display: inline-block; margin-bottom: 15px; }
+    .card { background: #222; padding: 15px; border-radius: 10px; margin-bottom: 10px; }
+    .footer { margin-top: 30px; color: #aaa; text-align: center; font-size: 14px; }
+    input, button { margin-top: 10px; }
   </style>
 </head>
 <body>
-  <a href="index.html" class="back">← Volver</a>
-  <h1 id="nombreCliente">Cliente</h1>
-  <h2>Saldo actual: $<span id="saldo">0</span></h2>
-  <button class="abono" onclick="registrarMovimiento('abono')">➕ Abonar</button>
-  <button class="consumo" onclick="registrarMovimiento('consumo')">➖ Consumir</button>
-
-  <div class="movimientos">
-    <h3>Historial de movimientos</h3>
-    <div id="historial"></div>
-  </div>
-
-  <script>
-    const params = new URLSearchParams(window.location.search);
-    const cliente = params.get("c");
-
-    if (!cliente) {
-      document.body.innerHTML = "<h2 style='color:red'>⚠️ Cliente no especificado</h2>";
-      throw new Error("Cliente no especificado");
-    }
-
-    document.getElementById("nombreCliente").textContent = "👤 " + cliente.charAt(0).toUpperCase() + cliente.slice(1);
-
-    function cargarSaldo() {
-      const saldo = localStorage.getItem(`saldo_${cliente}`) || "0";
-      document.getElementById("saldo").textContent = saldo;
-    }
-
-    function cargarHistorial() {
-      const historialDiv = document.getElementById("historial");
-      historialDiv.innerHTML = "";
-      const movimientos = JSON.parse(localStorage.getItem(`movimientos_${cliente}`) || "[]");
-      movimientos.reverse().forEach(mov => {
-        const div = document.createElement("div");
-        div.className = "mov";
-        div.textContent = `${mov.fecha} — ${mov.tipo === "abono" ? "Abono" : "Consumo"}: $${mov.monto}`;
-        historialDiv.appendChild(div);
-      });
-    }
-
-    function registrarMovimiento(tipo) {
-      const monto = prompt(`💰 Ingrese el monto del ${tipo === "abono" ? "abono" : "consumo"}:`);
-      if (!monto || isNaN(monto)) return alert("❌ Debes ingresar un número válido.");
-      const montoNum = parseInt(monto);
-      let saldo = parseInt(localStorage.getItem(`saldo_${cliente}`) || "0");
-      if (tipo === "abono") {
-        saldo += montoNum;
-      } else {
-        saldo -= montoNum;
-      }
-      localStorage.setItem(`saldo_${cliente}`, saldo);
-
-      const movimientos = JSON.parse(localStorage.getItem(`movimientos_${cliente}`) || "[]");
-      const fecha = new Date().toLocaleString();
-      movimientos.push({ tipo, monto: montoNum, fecha });
-      localStorage.setItem(`movimientos_${cliente}`, JSON.stringify(movimientos));
-
-      cargarSaldo();
-      cargarHistorial();
-    }
-
-    cargarSaldo();
-    cargarHistorial();
-  </script>
+  <h1>👤 Cliente</h1>
+  <div id="info"></div>
+  <input type="number" id="monto" placeholder="Monto (+ / -)" />
+  <button onclick="registrarMovimiento()">Registrar movimiento</button>
+  <h3>Historial</h3>
+  <ul id="historial"></ul>
+  <div class="footer">© Polobar 2025</div>
 </body>
 </html>
