--- a/cliente.html
+++ b/cliente.html
@@ -53,7 +53,7 @@
   </style>
 </head>
 <body>
-  <h2>👤 Cliente</h2>
+  <h2 id="cliente-nombre">👤 Cargando nombre...</h2>
   <div id="saldo">Cargando saldo...</div>
   <input type="number" id="monto" placeholder="Monto" />
   <br/>
